# stream-active-FL

./: .gitignore  README.md  pyproject.toml
configs/: detection_streaming_difficulty_adaptive.yaml  detection_streaming_difficulty_adaptive_teacher_gate.yaml  detection_streaming_no_filter.yaml  detection_streaming_no_filter_no_replay.yaml  detection_streaming_teacher_gate.yaml  federated_streaming_classification.yaml  federated_streaming_detection.yaml  offline_baseline.yaml  offline_classification.yaml  offline_detection.yaml  streaming_classification_difficulty_adaptive.yaml  streaming_classification_difficulty_adaptive_teacher_gate.yaml  streaming_classification_no_filter.yaml  streaming_classification_no_filter_no_replay.yaml  streaming_classification_teacher_gate.yaml  streaming_detection_difficulty_adaptive.yaml  streaming_detection_difficulty_adaptive_teacher_gate.yaml  streaming_detection_no_filter.yaml  streaming_detection_no_filter_no_replay.yaml  streaming_detection_teacher_gate.yaml  streaming_difficulty_adaptive.yaml  streaming_difficulty_adaptive_teacher_gate.yaml  streaming_no_filter.yaml  streaming_no_filter_no_replay.yaml  streaming_teacher_gate.yaml
experiments/: federated_streaming_classification.py  federated_streaming_detection.py  offline_baseline.py  offline_classification.py  offline_detection.py  streaming_baseline.py  streaming_classification.py  streaming_detection.py
src/stream_active_fl/: __init__.py
tools/labeling/: annotate.py  preprocess_images.py  update_annotations.py
tools/preprocessing/: config.py  crop_images.py  (+3 more)
(+32 files in other folders)
